updated style .css

--- a/style.css
+++ b/style.css
@@ -3,7 +3,162 @@
     padding: 0;
     box-sizing: border-box;
 
+}*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
+
+body{
+    background-image: linear-gradient(120deg,#f3d87e, #fda085);
+    color: white;
+    font-family: 'Poppins' , sans-serif; 
+    min-height: 100vh;
+}
+.custom-container{
+    margin-top: 100px;
+}
+header {
+    font-size: 1.5rem;
+}
+
+header, form{
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form input, form button{
+    padding: 0.5rem;
+    font-size: 2rem;
+    border: none;
+    background: white;
+}
+
+form button{
+    color: #fda085;
+    background: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+form button:hover{
+    background: #fda085;
+    color: white
+}
+
+.todo-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.todo-list{
+    min-width: 30%;
+    list-style: none;
+}
+
+.todo{
+    margin: 0.5rem;
+    background: white;
+    color: black;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+}
+
+.todo li{
+    flex: 1;
+
+}
+
+.trash-btn, .complete-btn{
+    background: #ff6f47;
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.complete-btn{
+    background: rgb(108, 255, 108);
+}
+
+.todo-item{
+    padding: 0rem 0.5rem;
+}
+
+.fa-trash, .fa-check{
+    pointer-events: none;
+}
+
+.completed{
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.fall{
+    /*transform: translateY(8rem) rotateZ('20deg');*/
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity : 0;
+}
+
+select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+}
+.select{
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+}
+
+select {
+    color: #ff6f47;
+    width: 10rem;
+    cursor: pointer;
+    padding: 1rem;
+}
+
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    background: #ff6f47;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.select:hover::after{
+    background: white;
+    color: #ff6f47;
+}
+
+/* .custom{
+    position: absolute;
+    top: 30px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+} */
+
+/* .filter-todo{
+    position: absolute;
+    top: 30px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+} */
 
 body{
     background-image: linear-gradient(120deg,#f3d87e, #fda085);
@@ -108,15 +263,6 @@ select{
     outline: none;
     border: none;
 }
-
-/* option{
-    position: absolute;
-    top: 30px;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);  
-} */
-
 .select{
     margin: 1rem;
     position: relative;
@@ -145,19 +291,3 @@ select {
     background: white;
     color: #ff6f47;
 }
-
-/* .custom{
-    position: absolute;
-    top: 30px;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-} */
-
-/* .filter-todo{
-    position: absolute;
-    top: 30px;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-} */
